<resources>
    <string name="app_name">Proyecto2</string>
    <string name="allie_sell">ALLIE SELL</string>
    <string name="correo">Correo</string>
    <string name="pass">Pass</string>
    <string name="recuperar_pass">Recuperar Pass</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="textview">TextView</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="cel">Cel</string>
    <string name="genero">Genero</string>
    <string name="direccion">Direccion</string>
    <string name="date">Date</string>
    <string name="registrarusu">RegistrarUsu</string>
    <string name="nombren">NombreN</string>
    <string name="apellidon">ApellidoN</string>
    <string name="correon">CorreoN</string>
    <string name="passn">PassN</string>
    <string name="celn">CelN</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="title_activity_homeadmin">homeadmin</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="bienvenido_administrador">Bienvenido Administrador</string>
    <string name="rol">Rol</string>
    <string name="reportes">Reportes</string>
    <string name="configuracion_de_usuario">Configuracion de Usuario</string>
    <string name="producto_individual">Producto Individual</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="configurar_cuenta">Configurar Cuenta</string>
    <string name="categoria">Categoria</string>
    <string name="precio">Precio</string>
    <string name="crud_usuarios">Crud Usuarios</string>
    <string name="buscar">Buscar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
</resources>
